# kv_engine

./: .copyrightignore  .flake8  .gitignore  .mailmap  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile.am  README.markdown  README.md  access_scanner.cc  access_scanner.hh  atomic.cc  atomic.hh  backfill.cc  backfill.hh  base-test.hh  basic_engine_testsuite.c  bgfetcher.cc  bgfetcher.hh  byteorder.c  callbacks.hh  checkpoint.cc  checkpoint.hh  checkpoint_remover.cc  command_ids.h  common.hh  config.cmake.h  config.h  config.h.in  config_static.h  configuration.cc  configuration.hh  configuration.json  configure.ac  crc32.h  default_engine.c  dispatcher.cc  (+98 more)
auditd/: CMakeLists.txt  README.md  auditd.c
cbcrypto/: CMakeLists.txt  cbcrypto.cc  cbcrypto_test.cc
cbsasl/: CBSASL.md  CMakeLists.txt  cbcrypto.cc  cbcrypto.h  cbcrypto_test.cc  cbsasl_internal.h  cbsasladm.cc  client.c  client.cc  client_server_test.cc  common.c  common.cc  context.cc  domain.cc  domain_test.cc  hash.c  hash.h  log.cc  log_callback.cc  mechanism.cc  mechanismfactory.cc  mechanismfactory.h  password_database.cc  password_database.h  password_database_test.cc  pwconv.cc  pwconv.h  pwconv_test.cc  pwfile.c  pwfile.cc  pwfile.h  sasl_server_test.cc  saslauthd_config.cc  scram_password_meta_data.cc  server.c  server.cc  strcmp.cc  strcmp_test.cc  strerror.cc  user.cc  (+6 more)
cluster_framework/: CMakeLists.txt  auth_provider_service.cc  auth_provider_service.h  bucket.cc  bucket.h  cluster.cc  cluster.h  dcp_packet_filter.h  dcp_replicator.cc  dcp_replicator.h  dcppipe.cc  dcppipe.h  node.cc  node.h
daemon/: CMakeLists.txt  RBAC.md  alloc_hooks.c  alloc_hooks.def  alloc_hooks.h  alloc_hooks_badmalloc.cc  alloc_hooks_dummy.cc  alloc_hooks_dummy.h  alloc_hooks_jemalloc.cc  alloc_hooks_jemalloc.h  alloc_hooks_tcmalloc.cc  alloc_hooks_tcmalloc.h  alloc_hooks_types.h  authn_authz_service_task.h  breakpad.cc  breakpad.h  breakpad_dummy.cc  breakpad_linux.cc  breakpad_settings.cc  breakpad_settings.h  breakpad_win32.cc  bucket_destroyer.cc  bucket_destroyer.h  bucket_manager.cc  bucket_manager.h  bucket_manager_test.cc  bucket_metering_stats_test.cc  bucket_stats_test.cc  bucket_threads.h  bucket_type.cc  bucket_type.h  bucket_validator_test.cc  buckets.cc  buckets.h  buckets_test.cc  buffer.h  cache.c  cache.h  cccp_notification_task.cc  cccp_notification_task.h  (+270 more)
dek/: CMakeLists.txt  manager.cc  manager.h  manager_unit_test.cc
executor/: CMakeLists.txt  cancellable_cpu_executor.cc  cancellable_cpu_executor.h  cb3_executorpool.cc  cb3_executorpool.h  cb3_executorthread.cc  cb3_executorthread.h  cb3_taskqueue.cc  cb3_taskqueue.h  executor.cc  executor.h  executorpool.cc  executorpool.h  fake_executorpool.h  folly_executorpool.cc  folly_executorpool.h  futurequeue.h  globaltask.cc  globaltask.h  limited_concurrency_task.cc  limited_concurrency_task.h  mock_executor_pool.cc  mock_executor_pool.h  notifiable_task.cc  notifiable_task.h  task_type.h  taskable.h  taskqueue.cc  taskqueue.h  tasks.def.h  tracer.cc  tracer.h  workload.h
fuzzing/: CMakeLists.txt  init.cc  init.h
json/: CMakeLists.txt  random_document_builder.cc  random_document_builder.h  syntax_validator.cc  syntax_validator.h  syntax_validator_bench.cc  syntax_validator_test.cc
json_web_token/: CMakeLists.txt  builder.cc  builder.h  jwt_test.cc  token.cc  token.h
logger/: CMakeLists.txt  custom_rotating_file_sink.cc  custom_rotating_file_sink.h  dedupe_sink.cc  dedupe_sink.h  logger.cc  logger.h  logger_benchmark.cc  logger_config.cc  logger_config.h  logger_config_test.cc  logger_iface.h  logger_test.cc  logger_test_fixture.cc  logger_test_fixture.h  prefix_logger.cc  prefix_logger.h  spdlogger.cc  spdlogger_test.cc
man/: CMakeLists.txt
programs/: CMakeLists.txt  cbsasladm.c  engine_testapp.c  gencode.cc  genconfig.cc  getpass.cc  getpass.h  hostname_utils.cc  hostname_utils.h  hostname_utils_test.cc  isasladm.c  mc_program_getopt.cc  mc_program_getopt.h  mcbasher.cc  mcbucket.c  mcctl.c  mchello.c  mcstat.c  mctimings.c  mctimings.cc  mock_server.c  natsort.h  natsort_test.cc  parse_tls_option.cc  parse_tls_option.h  sizes.c  ssltest.c  testapp.c  timedrun.c  utilities.c  utilities.cc  utilities.h
rbac/: CMakeLists.txt  privilege_check_bench.cc  privilege_database.cc  privilege_database_test.cc  privilege_test.cc  privileges.cc
snapshot/: CMakeLists.txt  download_properties.cc  download_properties.h  download_properties_test.cc  file_downloader.cc  file_downloader.h  file_downloader_test.cc  manifest.cc  manifest.h  manifest_test.cc  snapshot_downloader.cc  snapshot_downloader.h
snapshot_download/: CMakeLists.txt  file_downloader.h
statistics/: CMakeLists.txt  cbstat_collector.cc  collector.cc  definitions.cc  gen_stat_definitions.cc  labelled_collector.cc  metrics_metadata_7.6.0-1627.json  prometheus.cc  prometheus_collector.cc  stat_definitions.json  statdef.cc
tests/: CMakeLists.txt  README.txt  breakpad_test.py  config_parse_test.c  config_test.c  ep_perfsuite.cc  ep_test_apis.cc  ep_test_apis.h  ep_testsuite.cc  ep_testsuite.h  ep_testsuite_basic.cc  ep_testsuite_checkpoint.cc  ep_testsuite_common.cc  ep_testsuite_common.h  ep_testsuite_dcp.cc  ep_testsuite_tap.cc  ep_testsuite_xdcr.cc  header_define_once_test.py  logger_emfile_test.cc  logger_test.cc  profile_test.cc  sizes.c  ssltest.c  suite_stubs.c  tcmalloc_test.cc  testapp.c  testapp.cc  testapp.h  testapp_subdoc.cc  testapp_subdoc.h
time/: CMakeLists.txt  isotime.cc  timestamp_bench.cc  timestamp_test.cc
tracing/: CMakeLists.txt  trace_helpers.h  tracecode.cc  tracer.cc  tracer.h  tracetypes.h  tracing_bench.cc  tracing_test.cc
utilities/: CMakeLists.txt  JSON_checker.h  atomic_shared_ptr.h  breakpad.cc  breakpad.h  breakpad_common.cc  breakpad_linux.cc  breakpad_not_supported.cc  breakpad_settings.cc  breakpad_settings.h  breakpad_settings_test.cc  breakpad_win32.cc  clustermap_utils.cc  clustermap_utils.h  clustermap_utils_test.cc  config_parser.c  config_parser.cc  config_parser_test.cc  configuration_iface.cc  connection_iface.cc  cookie_iface.cc  (+80 more)
(+2760 files in other folders)
